@@ -152,6 +152,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|After
@@ -464,6 +480,197 @@ name|get
 argument_list|(
 literal|0
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCommitWithin
+specifier|public
+name|void
+name|testCommitWithin
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|DirectXmlRequest
+name|req
+init|=
+operator|new
+name|DirectXmlRequest
+argument_list|(
+literal|"/dataimport"
+argument_list|,
+name|xml
+argument_list|)
+decl_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+name|params
+argument_list|(
+literal|"command"
+argument_list|,
+literal|"full-import"
+argument_list|,
+literal|"clean"
+argument_list|,
+literal|"false"
+argument_list|,
+name|UpdateParams
+operator|.
+name|COMMIT
+argument_list|,
+literal|"false"
+argument_list|,
+name|UpdateParams
+operator|.
+name|COMMIT_WITHIN
+argument_list|,
+literal|"1000"
+argument_list|)
+decl_stmt|;
+name|req
+operator|.
+name|setParams
+argument_list|(
+name|params
+argument_list|)
+expr_stmt|;
+name|String
+name|url
+init|=
+literal|"http://localhost:"
+operator|+
+name|jetty
+operator|.
+name|getLocalPort
+argument_list|()
+operator|+
+literal|"/solr"
+decl_stmt|;
+name|CommonsHttpSolrServer
+name|solrServer
+init|=
+operator|new
+name|CommonsHttpSolrServer
+argument_list|(
+name|url
+argument_list|)
+decl_stmt|;
+name|solrServer
+operator|.
+name|request
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|queryAll
+init|=
+name|params
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*"
+argument_list|)
+decl_stmt|;
+name|QueryResponse
+name|qres
+init|=
+name|solrServer
+operator|.
+name|query
+argument_list|(
+name|queryAll
+argument_list|)
+decl_stmt|;
+name|SolrDocumentList
+name|results
+init|=
+name|qres
+operator|.
+name|getResults
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|results
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|qres
+operator|=
+name|solrServer
+operator|.
+name|query
+argument_list|(
+name|queryAll
+argument_list|)
+expr_stmt|;
+name|results
+operator|=
+name|qres
+operator|.
+name|getResults
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+literal|2
+operator|==
+name|results
+operator|.
+name|getNumFound
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|500
+argument_list|)
+expr_stmt|;
+block|}
+name|fail
+argument_list|(
+literal|"Commit should have occured but it did not"
 argument_list|)
 expr_stmt|;
 block|}
